--- a/website/package.json
+++ b/website/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
+    "animate.css": "^4.1.1",
+    "axios": "^1.7.9",
+    "framer-motion": "^11.13.1",
+    "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.0.4"
+    "react-fast-marquee": "^1.6.5",
+    "react-paginate": "^8.2.0",
+    "react-slick": "^0.30.2",
+    "sass": "^1.82.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "typescript": "^5",
