--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,18 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite"
-    },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.9",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.16",
         "vite": "^5.0"
     },
-    "dependencies": {
-        "@phosphor-icons/react": "^2.1.7",
-        "animate.css": "^4.1.1",
-        "framer-motion": "^11.13.1",
-        "react-fast-marquee": "^1.6.5",
-        "react-paginate": "^8.2.0",
-        "react-slick": "^0.30.2",
-        "sass": "^1.82.0",
-        "slick-carousel": "^1.8.1",
-        "swiper": "^11.1.15"
-    }
+    "private": true,
+    "scripts": {
+        "build": "vite build",
+        "dev": "vite"
+    },
+    "type": "module"
 }
