--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "react-paginate": "^8.2.0",
     "react-slick": "^0.30.2",
     "sass": "^1.82.0",
+    "sass-loader": "^13.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.15"
   },
