--- a/website/package.json
+++ b/website/package.json
@@ -19,6 +19,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-paginate": "^8.2.0",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.15.0",
     "sass": "^1.82.0",
     "sass-loader": "^13.0.0",
     "slick-carousel": "^1.8.1",
