--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "askdkc/breezejp": "^1.8",
+        "intervention/image": "^3.9",
         "laravel-lang/lang": "^15.9",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
