--- a/backend/composer.json
+++ b/backend/composer.json
@@ -14,6 +14,7 @@
         "intervention/image": "^3.9",
         "laravel-lang/lang": "^15.9",
         "laravel/framework": "^11.31",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
